2007-12-13  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gdk-base.defs:
	(pixbuf_new_from_file)
	(pixbuf_new_from_file_at_size): release the GIL, fixes #415611
	patch by Jakub Stachowski

2007-12-12  Ed Catmur  <ed@catmur.co.uk>

	* Makefile.am (EXTRA_DIST): Also distribute m4 files.

2007-12-12  Sebastien Bacher  <seb128@debian.org>

	* examples/glade/README: Fix wrong command name.

2007-12-12  Richard Hult  <richard@imendio.com>

	* examples/pygtk-demo/demos/hypertext.py
	(HypertextDemo.key_press_event): Use `gtk.keysyms', not `gtk.gdk'
	where applicable.

2007-12-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk-base.defs (render_icon): Bug 502871:
	gtk.Style.render_icon leaks a reference to the returned pixbuf.

2007-11-29  Dan Winship  <danw@gnome.org>

	* codegen/defsgen.py (GType): GType is a gulong, not a guint.
	Fixes crash on x86_64. #500508

2007-11-25  Matthew Barnes  <mbarnes@redhat.com>

	* gtk/Makefile.am: Install gtk-extrafuncs.defs.  Fixes #380020.

2007-11-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtk/gtk-base.defs: Add several `null-ok' for accel-related
	functions.

2007-11-13  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtk/gtkcontainer.override: (_wrap_GtkContainer__proxy_do_forall):
	do not leak allocated user data. Fixes #480306, patch by Mark Doffman.

2007-11-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* autogen.sh: use absolute path of srcdir; and use it in ACLOCAL_FLAGS.

2007-11-03  Julien Moutinho  <julien.moutinho@gmail.com>

	* gtk/gtk.override (_wrap_gtk_clipboard_set_with_data): Fix typo
	in the code.

2007-10-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.in: raise pygobject dependency to 2.14.0, fixes #478718
	reported by Daniel Gryniewicz.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* README: mention how to build docs, patch from Björn Lindqvist,
	fixes #479379.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.12.defs: