@@ -1,3 +1,8 @@
+2007-12-15  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* examples/pango/extentdemo.py: add new example (by Adam Olsen,
+	and Behdad Esfahbod), fixes #400810.
+
 2007-12-13  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* gtk/gdk-base.defs:
